--- a/src/styles/AppStyle/Import.scss
+++ b/src/styles/AppStyle/Import.scss
@@ -11,4 +11,5 @@
 @import '../App/Done.scss';
 @import '../App/Error.scss';
 @import '../App/Isorder.scss';
-@import '../App/Loading.scss'
+@import '../App/Loading.scss';
+@import '../App/NewForm.scss';
