--- a/src/styles/App/FormPage.scss
+++ b/src/styles/App/FormPage.scss
@@ -7,16 +7,17 @@
 .App{ 
   background-image:linear-gradient(220deg , var(--prim) ,var(--sec), var(--sec));
   height: 100vh; width: 100vw;
+  max-width: 100vw ; overflow: hidden;
     display: flex;  justify-content: flex-start; align-items: center;justify-content: space-around;
     padding: 3vw; 
     .Form{
       width: calc( var(--width) + 2); background:var(--bgForm) ;
-      height: 90vh;
+      // height: 90vh;
       display: flex ; flex-direction: column; align-items: center; 
       gap: 2vh;
         padding: 1vw;
       border-radius: 20px;
-      max-height: 50vw;
+      // max-height: 44vw;
     }
     h5{
       color: var(--sec);
@@ -160,7 +161,8 @@
     
     @media only screen and (max-width: 850px)  {
       --width : 58vw ;
-
+      overflow-y: scroll !important;
+      overflow-x: hidden !important;
       .Logo{
        width: 30vh !important;
       } 
@@ -173,8 +175,8 @@
     
   
     .Form{
-      height: 70vh;
-      max-height: 70vh;
+      // height: 70vh;
+      // max-height: 70vh;
     
     }
     input{
