--- a/src/styles/AppStyle/Import.scss
+++ b/src/styles/AppStyle/Import.scss
@@ -6,10 +6,10 @@
 @import './KeyFrame.scss';
 @import './App.scss';
 @import './Lung.scss';
-@import '../App/FormPage.scss';
 @import '../App/Rate.scss';
 @import '../App/Done.scss';
 @import '../App/Error.scss';
 @import '../App/Isorder.scss';
 @import '../App/Loading.scss';
 @import '../App/NewForm.scss';
+// @import '../App/FormPage.scss';
