--- a/src/styles/AppStyle/Varibils.scss
+++ b/src/styles/AppStyle/Varibils.scss
@@ -6,5 +6,12 @@
     --shadow: rgba(0, 0, 0, 0.15);
     --bgForm: #bccad9 ;
     --width : 38vw ;
+        --primary:#00afad;
+        --secondary : #56508c;
+        --text: white;
+        --bg: #f8f8f8;
+        --bg2:  #f8f8f8;
+        --shadow: rgba(0, 0, 0, 0.15);
+        --gray : rgb(207, 210, 214);
 }
 
