--- a/src/styles/App/NewForm.scss
+++ b/src/styles/App/NewForm.scss
@@ -1,8 +1,258 @@
 
 .NewForm{
-    min-width: 40vw;
-    height: 90vh;
-    background:var(--bgForm) ;
-    padding: 1vw;
+  width: 36vw;
+    min-width: 480px;
+    max-width: 50vw;
+    height: 550px;
+    background:white;
+    padding: 1vw 2vw;
     border-radius: 20px;
+}
+
+    .App{ 
+        background-image:linear-gradient(220deg , var(--prim) ,var(--sec), var(--sec));
+        height: 100vh; width: 100vw; 
+        max-width: 100vw ; overflow-x: hidden !important;
+          display: flex;  justify-content: flex-start; align-items: center;justify-content: space-around;
+          padding: 3vw; 
+          .Contact{
+                  display: flex; flex-direction: column; align-items: center ; justify-content: center; gap: .2vw;
+                  margin-block: 15px;
+                }
+          h5{
+            color: var(--sec);
+            font-size: 13px;
+            font-weight: bold;
+            text-align: center;
+          
+          }
+          h1{
+            font-size: 40px;
+            font-weight: bold;
+        
+          
+          }
+    }
+
+
+.Antd_input{
+
+}
+.OneInput{
+  display: flex;
+  width: 96%;
+  gap: 3%;
+    > div{
+    min-width:100%;
+   }
+}
+.TowInput{
+    display: flex;
+    width: 94%;
+    gap: 4%;
+      > div{
+      min-width:49%;
+      
+     }
+     
+     /* Mui form control root */
+      div .MuiFormControl-root{
+      min-width:95%;
+      
+     }
+    .MuiStack-root .MuiAutocomplete-root{
+      width:100% !important;
+     }
+     .MuiAutocomplete-root{
+      padding-top:8px;
+     }
+     p{
+      font-size: 10px;
+      text-align: right;
+     }
+  
+     
+     
+}
+.MuiLable{
+    float: right !important;
+}
+
+
+
+.threeInput{
+    display: flex;
+    gap: 10%;
+    > div{
+      max-width:24%;
+     }
+}
+
+
+.ant-space-vertical .ant-space-item .ant-picker{
+  top:24px;
+  right: 12px;
+  border-top-color:transparent;
+  border-right-style:none;
+  border-left-style:none;
+  border-bottom-color:#828282;
+  border-bottom-style:solid;
+  border-bottom-left-radius:0px;
+  border-bottom-right-radius:0px;
+  &::before{
+    position: absolute;
+    top: -20px;
+    left: 0px;
+    content: "تاريخ التسليم"; /* Replace with your desired text */
+    color: rgba(0, 0, 0, 0.6);
+    font-family: "Roboto","Helvetica","Arial",sans-serif;
+    font-weight: 400;
+    font-size: .7rem;
+    line-height: 1.4375em;
+    letter-spacing: 0.00938em;
+  }
+ }
+ 
+ 
+ .css-aqpgxn-MuiFormLabel-root-MuiInputLabel-root{
+  right: 0;
+ }
+ .Form_Submit{
+  margin-block: 20px;
+  button{
+   width:  98% ;
+   border: none; 
+   height: 38px;
+   border-radius: 7px;
+   font-size: 25px;
+   background-color: var(--sec);
+   color: var(--text);
+   text-align: center;
+
+   
+  }
+}
+.MuiSelect2Lable{
+
+  label{
+    margin-right: 20px !important ;
+
+  }
+}
+.Logo{
+  width: 35vw;
+}
+
+
+@media only screen and (max-width: 875px)  {
+    .App{
+          flex-direction: column-reverse; gap:50px ;
+          min-height: 700px;
+    }
+    .Logo{
+      width: 350px;
+
+    }
+}
+@media only screen and (max-width: 575px)  {
+  .App{
+        flex-direction: column-reverse; gap:50px ;
+        min-height: 700px;
+  }
+
+.NewForm{
+  width: 36vw;
+    min-width: 400px;
+    max-width: 50vw;
+    height: 550px;
+    background:white;
+    padding: 1vw 2vw;
+    border-radius: 20px;
+}
+  .Logo{
+    width: 350px;
+
+  }
+  .MuiSelect{
+
+    font-size: 11px !important;
+  }
+  .ant-picker .ant-picker-input input{
+    font-size:11px;
+   }
+   .ant-space-vertical .ant-space-item .ant-picker{
+    top:22px;
+    right: 12px;
+    &::before{
+      top: -16px; 
+      font-size: .6rem;
+    
+    }
+   }
+}
+
+@media only screen and (max-width: 450px)  {
+  .App{
+        flex-direction: column-reverse; gap:50px ;
+        min-height: 800px;
+        h5{
+          font-size: 10px;
+      
+        
+        }
+        h1{
+          font-size:30px;
+        
+        }
+  }
+
+.NewForm{
+  width: 36vw;
+    min-width: 300px;
+    max-width: 50vw;
+    height: 500px;
+    background:white;
+    padding: 1vw 2vw;
+    border-radius: 20px;
+}
+  .Logo{
+    width: 350px;
+
+  }
+  .MuiSelect{
+
+    font-size: 8px !important;
+  }
+  .ant-picker .ant-picker-input input{
+    font-size:7px;
+   }
+   .ant-space-vertical .ant-space-item .ant-picker{
+    top:21px;
+    right: 12px;
+    &::before{
+      top: -16px; 
+      font-size: .5rem;
+    
+    }
+   }
+   .threeInput{
+    display: flex;
+    padding-inline: 5px;
+    > div{
+      max-width:23%;
+     }
+ 
+}
+
+ .MuiFormControl-root .MuiSelect{
+  width:85px;
+ }
+
+  
+ .css-1c2i806-MuiFormLabel-root-MuiInputLabel-root{
+  left:  60% !important;
+ }
+ p{
+  font-size: 9px !important;
+ }
 }
